--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
-  "name": "${PROJECT_NAME}",
+  "name": "MarsAppApi",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "nodemon src/server.ts"
   },
-  "private": true
+  "devDependencies": {
+    "typescript": "^5.6.2"
+  },
+  "private": true,
+  "dependencies": {
+    "@types/express": "^4.17.21",
+    "axios": "^1.7.7",
+    "express": "^4.21.0",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2"
+  }
 }
